GH-1675 Add first draft for more generic data source logic